CrawlerUntil/splash/Depoly.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crawleruntil
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splash
  namespace: crawleruntil
  labels:
    app: splash
spec:
  replicas: 3
  selector:
    matchLabels:
      app: splash
  template:
    metadata:
      labels:
        app: splash
    spec:
      containers:
        - name: splash
          image: scrapinghub/splash:latest
          ports:
            - containerPort: 8050
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.4"
            limits:
              memory: "3Gi"
              cpu: "0.8"
      restartPolicy: Always
