CrawlerUntil/splash/NodePort.yaml
kind: Service
apiVersion: v1
metadata:
  name: splash
  namespace: crawleruntil
spec:
  selector:
    app: splash
  type: NodePort
  ports:
    - name: "8050"
      port: 8050
      nodePort: 30805
