CrawlerUntil/splash/Ingress-https.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: crawleruntil
  labels:
    app: splash
  name: splash
spec:
  selector:
    app: splash
  ports:
    - name: "8050"
      port: 8050
      targetPort: 8050
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splash
  namespace: crawleruntil
  labels:
    name: splash
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: splash.paynewu.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: splash
                port:
                  number: 8050
