CrawlerUntil/splash/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-splash
  namespace: splash
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
    - host: www.asd.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: splash
                port:
                  number: 8050
