CrawlerUntil/splash/ingress-http-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crawleruntil

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splash
  namespace: crawleruntil
spec:
  replicas: 3
  selector:
    matchLabels:
      app: splash
  template:
    metadata:
      labels:
        app: splash
    spec:
      containers:
        - name: splash
          image: scrapinghub/splash:latest
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: splash
  namespace: crawleruntil
  labels:
    app: crawleruntil
spec:
  selector:
    app: splash
  ports:
    - port: 8050
      targetPort: 8050

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splash
  namespace: crawleruntil
  labels:
    name: splash
spec:
  rules:
    - host: splash.paynewu.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: splash
                port:
                  number: 8050
